# insurance

./: Makefile  README.md  docker-compose.yaml
api/: Dockerfile  Makefile  docker-compose.yaml
api/app/: pyproject.toml  script.sh
api/app/src/: init_database.py  main.py
api/app/src/database/: models.py  repository.py  service.py
api/app/src/services/: kafka_service.py  main_service.py  serializers.py  token_service.py
db/: Makefile  docker-compose.yaml
migrations/: Dockerfile  Makefile  docker-compose.yaml
migrations/app/: pyproject.toml
migrations/app/src/migrations/versions/: 000.py
