[tool.poetry]
name = "Insurance api"
version = "1"
description = ""
authors = ["Kuzina Ekaterina"]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.113"
uvicorn = "^0.30"
SQLAlchemy = "^2.0.23"
asyncpg = "^0.29.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
pylint = "^3.0.2"
aiofiles = "^24.0.0"
bcrypt = "^4.0.0"
PyJWT = "^2.8.0"
confluent_kafka = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
